--- a/src/componet/about/about.css
+++ b/src/componet/about/about.css
@@ -68,14 +68,14 @@
     border-radius: 3px;  
 }
  
-@media screen and (max-width: 768px) {
+ 
+@media screen and (max-width:490px) {
     #about{  
-        margin-top: 320px;
-        height: 650px;
-        width: 315px;
+        margin-top: 420px;
+        height: 1250px;
+        width: 1205px;
         background-color: #ffe0b2;   
-
-    }  
+    } 
     #about .main-about{
         display: block;
     }
@@ -83,50 +83,52 @@
         padding-left: 13px;   
     } 
     .main-about .about-left img{
-        width:220px;
-        height: 290px;
+        width:500px;
+        height: 590px;
         border: 5px solid #f2f2f2;
         border-radius: 15px;
         position: relative;
         mix-blend-mode: darken;
-        margin-top: -50px; 
-     }
-     .main-about .about-right{
-        width: 100%;
-        padding: 10px 20px;
+        margin-top: -100px; 
+     } 
+     .main-about .about-right h2{
+        font-size: 60px;
+        padding-bottom: 10px;   
     }
-    .main-about .about-right h2{
-        font-size: 1.6rem;
-        padding-bottom: 30px;   
-    }
-    
     .main-about .about-right h3{
         padding-bottom: 20px;
-        font-size: 17px;
+        font-size: 45px;
+        margin-left: 15px;
+    }
+    .main-about .about-right{
+        width: 100%;
+        padding: 10px 20px;
     }
     .main-about .about-right h4{
         padding-bottom: 20px;
         color: var(--light);
-        font-size: 0.9rem;
+        font-size: 2.3rem;
+        margin-bottom: 20px;
     }
     .main-about .about-right a{
         text-decoration: none;
-        padding: 9px 15px;
-        font-size: 15px;
+        padding: 15px 29px;
+        font-size: 40px;
         border-radius: 30px;
         background-color: var(--secondary);
         color: #f4ae26;
-    }  
-}
-@media screen and (max-width: 375px) { 
+    }
+} 
+
+@media screen and (max-width: 350px) { 
     
     #about{  
-        margin-top: 320px;
-        height: 650px;
-        width: 295px;
+        margin-top: 420px;
+        height: 950px;
+        width: 795px;
         background-color: #ffe0b2;   
-
     }  
+
     #about .main-about{
         display: block;
     }
@@ -134,38 +136,98 @@
         padding-left: 13px;   
     } 
     .main-about .about-left img{
-        width:200px;
-        height: 280px;
+        width:400px;
+        height: 490px;
         border: 5px solid #f2f2f2;
         border-radius: 15px;
         position: relative;
         mix-blend-mode: darken;
-        margin-top: -50px; 
+        margin-top: -100px; 
      }
      .main-about .about-right{
         width: 100%;
         padding: 10px 20px;
     }
     .main-about .about-right h2{
-        font-size: 1.6rem;
+        font-size: 3rem;
         padding-bottom: 30px;   
     }
     
     .main-about .about-right h3{
         padding-bottom: 20px;
-        font-size: 17px;
+        font-size: 38px;
+        margin-left: 10px;
     }
     .main-about .about-right h4{
         padding-bottom: 20px;
         color: var(--light);
-        font-size: 0.9rem;
+        font-size: 1.8rem;
+        margin-bottom: 20px;
     }
     .main-about .about-right a{
         text-decoration: none;
-        padding: 9px 15px;
-        font-size: 15px;
+         
+        padding: 15px 19px;
+        font-size: 30px;
         border-radius: 30px;
         background-color: var(--secondary);
         color: #f4ae26;
     }
+ }
+ @media screen and (max-width:1024px) {
+    #about .under{
+        border-bottom: 6px solid #dd912b;
+        border-radius: 3px;  
+    }
+    #about{  
+        margin-top: 420px;
+        height: 2300px;
+        width: 2795px;
+        background-color: #ffe0b2;   
+    }  
+
+    #about .main-about{
+        display: block;
+    }
+    .main-about .about-left{
+        padding-left: 13px;   
+    } 
+    .main-about .about-left img{
+        width:900px;
+        height: 890px;
+        border: 5px solid #f2f2f2;
+        border-radius: 15px;
+        position: relative;
+        mix-blend-mode: darken;
+        margin-top: -100px; 
+     }
+     .main-about .about-right{
+        width: 100%;
+        padding: 10px 20px;
+    }
+    .main-about .about-right h2{
+        font-size: 8rem;
+        padding-bottom: 30px;   
+    }
+    
+    .main-about .about-right h3{
+        padding-bottom: 20px;
+        font-size: 78px;
+        margin-left: 10px;
+    }
+    .main-about .about-right h4{
+        padding-bottom: 20px;
+        color: var(--light);
+        font-size: 4.8rem;
+        margin-bottom: 6cqh;
+    }
+    .main-about .about-right a{
+        text-decoration: none;
+        padding: 45px 29px;
+        font-size: 70px;
+        border-radius: 30px;
+        background-color: var(--secondary);
+        color: #f4ae26;
+    }
+ 
  }
