--- a/src/componet/header/header.css
+++ b/src/componet/header/header.css
@@ -84,8 +84,8 @@ header img{
 
 @media screen and (max-width:1024px) {
     header img{
-        width: 190px;
-        height: 200px;
+        width: 390px;
+        height: 220px;
         mix-blend-mode: multiply;
     }
     header .nav-btn{
@@ -98,8 +98,8 @@ header img{
       position: fixed;
       top:0;
       left:0;
-      height: 48%;
-      width:77%;
+      height: 18%;
+      width:100%;
       flex-direction: column;
       display: flex;
       align-items: center;
@@ -120,40 +120,40 @@ header img{
       right: 2rem;
     }
         nav a{
-            font-size: 1rem;
+            font-size: 3rem;
         }
 
 }
 @media screen and (max-width: 768px) {
-    .head_right img{
+     .head_right img{
         width: 20px;
         height: 20px;
         visibility: hidden;
     }
 
     .head_right .search{
-        width: 85%;
-        height: 30%;
+        width: 180%;
+        height: 80%;
         display: flex;
         align-items: center;
         background: #fff;
         margin-top: 12px;
         border-radius: 50px;
-        margin-left: -18px;
+        margin-left: -8px;
         
     }
     .search input{
-        font-size: 10px;
+        font-size: 40px;
     }
     header{ 
         z-index: 9999;
         border-bottom: 2px solid rgba(0, 0, 0, 0.1); 
         position: fixed;
-        width: 57%;
+        width: 100%;
     }
     header img{
-        width: 120px;
-        height: 180px;
+        width: 360px;
+        height: 220px;
         mix-blend-mode: multiply;
     }
     header .nav-btn{
@@ -166,8 +166,8 @@ header img{
       position: fixed;
       top:0;
       left:0;
-      height: 38%;
-      width:55%;
+      height: 18%;
+      width:100%;
       flex-direction: column;
       display: flex;
       align-items: center;
@@ -188,7 +188,91 @@ header img{
       right: 2rem;
     }
         nav a{
-            font-size: 1rem;
+            font-size: 3rem;
+        }
+        .head_right .search{
+            display: flex;
+            align-items: center;
+            background: #fff;
+            padding: 1px 2px;
+            border-radius: 50px;
+        }
+        .shop{
+            width:20px;
+            height: 20px;
+            margin-left:-100px;
+            margin-bottom:-10PX; 
+            visibility: hidden;
+        } 
+    
+      
+  
+}
+@media screen and (max-width: 768px) {
+    .head_right img{
+        width: 20px;
+        height: 20px;
+        visibility: hidden;
+    }
+
+    .head_right .search{
+        width: 180%;
+        height: 80%;
+        display: flex;
+        align-items: center;
+        background: #fff;
+        margin-top: 12px;
+        border-radius: 50px;
+        margin-left: -8px;
+        
+    }
+    .search input{
+        font-size: 40px;
+    }
+    header{ 
+        z-index: 9999;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.1); 
+        position: fixed;
+        width: 100%;
+    }
+    header img{
+        width: 360px;
+        height: 220px;
+        mix-blend-mode: multiply;
+    }
+    header .nav-btn{
+       visibility: visible;
+       opacity: 1;
+       font-size: 1.3rem;
+       margin-top: 20px;
+    }
+    header nav{
+      position: fixed;
+      top:0;
+      left:0;
+      height: 18%;
+      width:100%;
+      flex-direction: column;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+      background-color: var(--bg-color);
+      transition: 1s;
+      transform: translateY(-100vh);
+      border-bottom: 2px solid #543a16;
+    }
+    header .responsive_nav{
+        transform: none;
+
+    }
+    nav .nav-close-btn{
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+    }
+        nav a{
+            font-size: 3rem;
         }
         .head_right .search{
             display: flex;
@@ -216,7 +300,7 @@ header img{
     }
 
     .head_right .search{
-        width: 65%;
+        width: 90%;
         height: 30%;
         display: flex;
         align-items: center;
@@ -227,16 +311,16 @@ header img{
         
     }
     .search input{
-        font-size: 10px;
+        font-size: 20px;
     }
     header{ 
         z-index: 9999;
         border-bottom: 2px solid rgba(0, 0, 0, 0.1); 
         position: fixed;
-        width: 54%;
+        width: 100%;
     }
     header img{
-        width: 120px;
+        width: 160px;
         height: 180px;
         mix-blend-mode: multiply;
     }
@@ -250,8 +334,8 @@ header img{
       position: fixed;
       top:0;
       left:0;
-      height: 38%;
-      width:55%;
+      height: 20%;
+      width:100%;
       flex-direction: column;
       display: flex;
       align-items: center;
@@ -278,8 +362,9 @@ header img{
             display: flex;
             align-items: center;
             background: #fff;
-            padding: 1px 2px;
+            padding: 10px 50px;
             border-radius: 50px;
+             
         }
         .shop{
             width:20px;
