--- a/src/componet/home/home.css
+++ b/src/componet/home/home.css
@@ -24,6 +24,7 @@ justify-content: space-between;
 #hero{
     padding: 240px 0;
     height: 800px;
+    width: 100%;
     background-color: var(--bg-color);
 }
 #hero .hero-left{
@@ -57,6 +58,7 @@ justify-content: space-between;
     width: 30px;
     padding: 5px;
     margin: 0 0 -5px 10px ; 
+    mix-blend-mode: multiply;
 }
 .hero-left .order a:last-of-type {
     text-decoration: none;
@@ -98,29 +100,32 @@ justify-content: space-between;
     left: -15px;
     top:300px ;
    }
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 350px){
     .container-home{
      display: block;
     } 
     #hero{
-        padding: 20px 0;
-        height: 800px;
-        width: 295px;
+        padding: 280px 0;
+        height: 1300px;
+        width: 377%;
         background-color: var(--bg-color);
     }
+
     #hero .hero-left{
-        width: 300px;
+        width: 800px;
     }
     #hero .hero-left h2{
-        font-size: 20px;
+        font-size: 44px;
+        margin-left: 40px;
     }
     #hero .hero-left{
-        padding: 10px 10px;
+        padding: 20px 20px;
     
     }
     #hero .hero-left p{
         padding: 20px 0 30px;
-        font-size: 14px;
+        font-size: 30px;
+        margin-left: 40px;
         color: var(--light);
     }
     .hero-left .order a:first-of-type{
@@ -128,117 +133,129 @@ justify-content: space-between;
         padding: 5px 5px;
         background-color: var(--duu);
         color: #fff;
-        font-size: 9px;
+        font-size: 19px;
         border-radius: 30px;
+        margin-left: 40px;
     }
     .hero-left .order a:first-of-type img{
         width: 18px;
         padding: 5px;
         margin: 0 0 -5px 10px ; 
+        mix-blend-mode: multiply;
     }
     .hero-left .order a:last-of-type {
         text-decoration: none;
         margin-left: 20px;
-        font-size: 10px;
+        font-size: 19px;
         background-color: var(--bg-color);
         color:var(--primary);
     }
     #hero .hero-right img:first-of-type{
-        width: 250px;
-        border-radius: 50%;   
+        margin-top: 40px;
+        width: 450px;
+        border-radius: 50%; 
+        margin-left: 300px;  
     }
     .hero-right h3{
         position: absolute;
-        padding: 1px 4px;
-        font-size: 1rem;
+        padding: 10px 30px;
+        font-size: 1.5rem;
         background-color: #fff;
         color: var(--secondary);
         border: 5px solid #f3eae1;
         border-radius: 30px;
     }
     .hero-right h3:nth-child(2){
-        top: 70px;
-        left: -10px;
+        top: 120px;
+        left: 220px;
     }
     .hero-right h3:nth-child(3){
-     top: 130px;
-     right: -5px;
+     top: 180px;
+     right:220px;
     }
     .hero-right h3:nth-child(4){
-        left: 40px;
-        top:220px ;
+        left:350px;
+        top:390px ;
        }
 } 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 490px) {
     .container-home{
         display: block;
        } 
        #hero{
-           padding: 240px 0;
-           height: 800px;
-           width: 100%;
+           padding: 280px 0;
+           height: 1500px;
+           width: 377%;
            background-color: var(--bg-color);
        }
+   
        #hero .hero-left{
-           width: 500px;
+           width: 900px;
        }
        #hero .hero-left h2{
-           font-size: 24px;
+           font-size: 50px;
+           margin-left: 40px;
        }
        #hero .hero-left{
-           padding: 10px 10px;
+           padding: 20px 20px;
        
        }
        #hero .hero-left p{
            padding: 20px 0 30px;
-           font-size: 14px;
+           font-size: 39px;
+           margin-left: 40px;
            color: var(--light);
        }
        .hero-left .order a:first-of-type{
            text-decoration: none;
-           padding: 5px 5px;
+           padding: 15px 9px;
            background-color: var(--duu);
            color: #fff;
-           font-size: 9px;
+           font-size: 35px;
            border-radius: 30px;
+           margin-left: 40px;
        }
        .hero-left .order a:first-of-type img{
            width: 18px;
            padding: 5px;
            margin: 0 0 -5px 10px ; 
+           mix-blend-mode: multiply;
        }
        .hero-left .order a:last-of-type {
            text-decoration: none;
            margin-left: 20px;
-           font-size: 10px;
+           font-size: 39px;
            background-color: var(--bg-color);
            color:var(--primary);
        }
        #hero .hero-right img:first-of-type{
-           width: 270px;
-           border-radius: 50%;   
+           margin-top: 40px;
+           width: 700px;
+           border-radius: 50%; 
+           margin-left: 380px;  
        }
        .hero-right h3{
            position: absolute;
-           padding: 1px 4px;
-           font-size: 1rem;
+           padding: 10px 30px;
+           font-size: 2.5rem;
            background-color: #fff;
            color: var(--secondary);
            border: 5px solid #f3eae1;
            border-radius: 30px;
        }
        .hero-right h3:nth-child(2){
-           top: 70px;
-           left: -10px;
+           top: 120px;
+           left: 590px;
        }
        .hero-right h3:nth-child(3){
-        top: 130px;
-        right: 30px;
+        top: 210px;
+        right:290px;
        }
        .hero-right h3:nth-child(4){
-           left: 40px;
-           top:220px ;
+           left:730px;
+           top:490px ;
           }
 }
+
+
  
