--- a/src/componet/menu/menu.css
+++ b/src/componet/menu/menu.css
@@ -40,44 +40,66 @@ margin: 30px 0;
 }
 .HOT{
     padding: 40px;
-}
-@media screen and (max-width: 768px) {
+} 
+@media screen and (max-width:490px){
     #menu{
         padding: 20px 0;
-         margin-top: 20px;
+        margin-top: 20px;
+        width: 180%;
         }
         .main-menu h2{
-            font-size: 20px;
+            font-size: 50px;
         }
         .main-menu .cards{
-            margin-top: -150px;
+            margin-top: -100px;
             display: grid;
             grid-template-columns: repeat(auto-fit,minmax(260PX,1fr));
             gap: 30PX;
-            margin-left: 10px;
+            margin-left: 320px;
             margin-right: 10px;
+        
         }
-        .main-menu h3{
-           font-size: 12px;
-        }
+    
+
 }
 @media screen and (max-width: 350px) { 
     #menu{
         padding: 20px 0;
-         margin-top: 20px;
+        margin-top: 20px;
+        width: 180%;
         }
         .main-menu h2{
-            font-size: 20px;
+            font-size: 45px;
         }
         .main-menu .cards{
-            margin-top: 20px;
+            margin-top: -100px;
             display: grid;
             grid-template-columns: repeat(auto-fit,minmax(260PX,1fr));
             gap: 30PX;
-            margin-left: -20px;
+            margin-left: 320px;
             margin-right: 10px;
+        
         }
-        .main-menu h3{
-           font-size: 12px;
+    }
+    @media screen and (max-width:1024px) {
+        #menu .under{
+            border-bottom: 6px solid #dd912b;
+            border-radius: 3px;  
         }
- }
+        #menu{
+            padding: 20px 0;
+            margin-top: 90px;
+            width: 290%;
+            }
+            .main-menu h2{
+                font-size: 95px;
+            }
+            .main-menu .cards{
+                margin-top: 100px;
+                display: grid;
+                grid-template-columns: repeat(auto-fit,minmax(60px,2fr));
+                gap: 900px;
+                margin-left: 320px;
+                margin-right:30px;
+            }
+    }
