--- a/src/componet/they/they.css
+++ b/src/componet/they/they.css
@@ -70,89 +70,169 @@ bottom: 50px;
     border-bottom: 3px solid #dd912b;
     border-radius: 3px;  
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width:1024px) {
+    #says .under{
+        border-bottom: 6px solid #dd912b;
+        border-radius: 3px;  
+    }
     .main-says .say-left h2{
-        font-size: 1.4rem;
+        font-size: 90px;
         padding-top: 90px;
-        padding-bottom: 20px;
+        margin-left: 30px;
+        padding-bottom: 60px;
+    }
+    .main-says .say-left P{
+        font-size: 70px;
+        margin-left: 30px;
+       
     }
     #says{
         padding: 40px 0;
         margin: 50px 0;
-        width: 70%;
-        height: 1300px;
+        width: 200%;
+        height: 2700px;
         background-color: #ffe0b2;
         border-top-right-radius:20px ;
         border-bottom-right-radius:20px ;
     }
     #says .main-says{
-        width: 80%;
+        width: 100%;
         margin: auto;
         display: block;
     }
     .main-says .says-right{
-        width: 45%;
+        width: 100%;
         display: block;
     }
     .says-right img{
         mix-blend-mode: darken;
         border-radius: 5px;
         border: 5px solid #ebb874;
-        width: 200px;
-        height: 240px;
-        margin-left: 50px;
+        width: 800px;
+        height: 580px;
+        margin-left: 1620px;
+       
     }
     .main-says .says-right div>div{
         padding: 10px;
         background-color: #ffcb7c;
         border: 5px solid #ffcb7c;
         border-radius: 10px;
-        font-size: .9rem;
+        font-size: 4rem;
+        position: absolute;
+        bottom: -90px;
+        margin-right: 260px;
+         
+        
+        }
+        .says-right h3{
+            font-size: 50px;
+            margin-left: 40px;
+        }
+ 
+}
+@media screen and (max-width:490px) {
+    .main-says .say-left h2{
+        font-size: 50px;
+        padding-top: 90px;
+        margin-left: 30px;
+        padding-bottom: 20px;
+    }
+    .main-says .say-left P{
+        font-size: 40px;
+        margin-left: 20px;
+    }
+    #says{
+        padding: 40px 0;
+        margin: 50px 0;
+        width: 200%;
+        height: 1970px;
+        background-color: #ffe0b2;
+        border-top-right-radius:20px ;
+        border-bottom-right-radius:20px ;
+    }
+    #says .main-says{
+        width: 100%;
+        margin: auto;
+        display: block;
+    }
+    .main-says .says-right{
+        width: 95%;
+        display: block;
+    }
+    .says-right img{
+        mix-blend-mode: darken;
+        border-radius: 5px;
+        border: 5px solid #ebb874;
+        width: 590px;
+        height: 450px;
+        margin-left: 520px;
+    }
+    .main-says .says-right div>div{
+        padding: 10px;
+        background-color: #ffcb7c;
+        border: 5px solid #ffcb7c;
+        border-radius: 10px;
+        font-size: 2rem;
+        position: absolute;
+        bottom: 20px;
+        
+        }
+        .says-right h3{
+            font-size: 40px;
+            margin-left: 10px;
+        }
+ }  
+   
+@media screen and (max-width: 350px) { 
+    .main-says .say-left h2{
+        font-size: 50px;
+        padding-top: 90px;
+        margin-left: 30px;
+        padding-bottom: 20px;
+    }
+    .main-says .say-left P{
+        font-size: 40px;
+        margin-left: 20px;
+    }
+    #says{
+        padding: 40px 0;
+        margin: 50px 0;
+        width: 200%;
+        height: 1900px;
+        background-color: #ffe0b2;
+        border-top-right-radius:20px ;
+        border-bottom-right-radius:20px ;
+    }
+    #says .main-says{
+        width: 100%;
+        margin: auto;
+        display: block;
+    }
+    .main-says .says-right{
+        width: 95%;
+        display: block;
+    }
+    .says-right img{
+        mix-blend-mode: darken;
+        border-radius: 5px;
+        border: 5px solid #ebb874;
+        width: 390px;
+        height: 400px;
+        margin-left: 520px;
+    }
+    .main-says .says-right div>div{
+        padding: 10px;
+        background-color: #ffcb7c;
+        border: 5px solid #ffcb7c;
+        border-radius: 10px;
+        font-size: 2rem;
         position: absolute;
         bottom: 20px;
          
         }
-}
-@media screen and (max-width: 375px) { 
-    .main-says .say-left h2{
-        font-size: 1.4rem;
-        padding-top: 90px;
-        padding-bottom: 20px;
-    }
-    #says{
-        padding: 40px 0;
-        margin: 50px 0;
-        width: 70%;
-        height: 1300px;
-        background-color: #ffe0b2;
-        border-top-right-radius:20px ;
-        border-bottom-right-radius:20px ;
-    }
-    #says .main-says{
-        width: 80%;
-        margin: auto;
-        display: block;
-    }
-    .main-says .says-right{
-        width: 45%;
-        display: block;
-    }
-    .says-right img{
-        mix-blend-mode: darken;
-        border-radius: 5px;
-        border: 5px solid #ebb874;
-        width: 200px;
-        height: 240px;
-        margin-left: 50px;
-    }
-    .main-says .says-right div>div{
-        padding: 10px;
-        background-color: #ffcb7c;
-        border: 5px solid #ffcb7c;
-        border-radius: 10px;
-        font-size: .9rem;
-        position: absolute;
-        bottom: 20px;
-         
+        .says-right h3{
+            font-size: 40px;
+            margin-left: 10px;
         }
  }
